[gd_scene load_steps=2 format=3 uid="uid://duv7g4w1b42do"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCActionNode.gd" id="1_63wvx"]

[node name="DCActionNode" type="GraphNode"]
offset_right = 259.0
offset_bottom = 78.0
resizable = true
title = "Action"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.792157, 1, 0.490196, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 0.5, 0.5, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_63wvx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name: "

[node name="ActionNameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
layout_mode = 2
