[gd_scene load_steps=2 format=3 uid="uid://duv7g4w1b42do"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCActionNode.gd" id="1_63wvx"]

[node name="ActionNode" type="GraphNode"]
offset_right = 295.0
offset_bottom = 231.0
resizable = true
title = "Action"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.803922, 1, 0.52549, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 0.501961, 0.501961, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 0.501961, 0.501961, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_63wvx")

[node name="TrueLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "True"

[node name="FalseLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "False"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionNameLineEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "{\"Type\": \"MyAction\"}"
